# n64-pico-switch

./: CMakeLists.txt  Dockerfile  README.md
.trunk/: trunk.yaml
include/: Controller.h  GamecubeController.h  SwitchConsts.h  XboxController_BLE.h  btstack_config.h  hog_host.h  lwipopts.h
src/: CMakeLists.txt  main.cpp
src/otherController/: CMakeLists.txt  Controller.cpp
src/otherController/xbox_ble/: CMakeLists.txt  XboxController_BLE.cpp  hog_host.c
src/switchController/: CMakeLists.txt  SwitchCommon.cpp  SwitchUsb.cpp
